<resources>
    <string name="app_name">ComeToOceanToFish</string>

    <!-- Strings related to login -->
    <string name="prompt_id">ID</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_password_re">비밀번호 재입력</string>
    <string name="prompt_nickname">닉네임</string>
    <string name="prompt_phone_numb">핸드폰번호</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This ID is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_password_check">Password and check password are incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_lend">Add Lend</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
</resources>
